added Card component

--- a/src/styles/ComparePrediction.css
+++ b/src/styles/ComparePrediction.css
@@ -1,4 +1,13 @@
 .cp-card {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    margin: 50px 350px;
+}
+
+.cp-card-title {
+    text-align: center;
+}
+
+.ant-card-body {
+    width: 100%;
 }
