made Home mobile responsive

--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -28,11 +23,18 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 600px) {
+  .desktop-header {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+.mobile-nav {
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .mobile-nav {
+    display: block;
   }
 }
