--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -6,3 +6,21 @@
 .about-card {
     max-height: 450px;
 }
+
+@media only screen and (max-width: 600px) {
+    .about-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    .about-card {
+        max-width: 90%;
+    }
+  }
+
+  
