--- a/src/styles/Today.css
+++ b/src/styles/Today.css
@@ -7,3 +7,21 @@
 .today-title {
     text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+    .today-card {
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        margin-top: 20px;
+    }
+  }
+
+  .spinner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    margin-top: 20px;
+    min-height: 80vh;
+  }
