--- a/src/styles/MobileNavBar.css
+++ b/src/styles/MobileNavBar.css
@@ -12,3 +12,10 @@
         display: block;
     }
   }
+
+
+  @media only screen and (max-width: 600px) {
+    .nav-menu{
+        border-top: 0.005px solid gray;
+    }
+  }
