formatted scores in Today and Compare. General code cleanup

--- a/src/styles/Today.css
+++ b/src/styles/Today.css
@@ -1,6 +1,6 @@
 .today-card {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     margin: 50px 350px;
 }
 
@@ -24,4 +24,10 @@
     margin: 0;
     margin-top: 20px;
     min-height: 80vh;
+  }
+
+  .card-title {
+      width: 100%;
+      margin: 0;
+      text-align: center;
   }
