--- a/src/styles/MobileNavBar.css
+++ b/src/styles/MobileNavBar.css
@@ -19,3 +19,9 @@
         border-top: 0.005px solid gray;
     }
   }
+
+  @media only screen and (max-width: 600px) {
+    .m-1{
+       margin: 0 8px;
+    }
+  }
