--- a/src/styles/Today.css
+++ b/src/styles/Today.css
@@ -1,7 +1,26 @@
+.today-content {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .today-card {
     display: flex;
     justify-content: center;
-    margin: 50px 350px;
+    width: 50%;
+    border: .3px solid gray;
+    padding: 20px;
+}
+
+.today-card-away {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.today-card-home {
+    display: flex;
+    justify-content: flex-end;
 }
 
 .today-title {
