--- a/src/styles/Today.css
+++ b/src/styles/Today.css
@@ -1,26 +1,35 @@
 .today-content {
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.today-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .today-card {
     display: flex;
-    justify-content: center;
-    width: 50%;
+    justify-content: space-evenly;
+    width: 45%;
     border: .3px solid gray;
     padding: 20px;
+    margin: 20px;
 }
 
 .today-card-away {
     display: flex;
     justify-content: flex-start;
+    min-width: 40%;
 }
 
 .today-card-home {
     display: flex;
     justify-content: flex-end;
+    min-width: 40%;
 }
 
 .today-title {
