--- a/src/styles/Today.css
+++ b/src/styles/Today.css
@@ -15,10 +15,12 @@
 .today-card {
     display: flex;
     justify-content: space-evenly;
-    width: 45%;
-    border: .3px solid gray;
+    min-width: 45%;
+    border: .8px solid gray;
     padding: 20px;
     margin: 20px;
+    border-radius: 4px;
+    box-shadow: 2.5px 2px 3px -2px rgba(0,0,0,0.75);
 }
 
 .today-card-away {
@@ -68,14 +70,18 @@
 
 .today-title {
     text-align: center;
+    font-size: 2rem;
 }
 
 @media only screen and (max-width: 600px) {
     .today-card {
         display: flex;
-        justify-content: center;
+        justify-content: space-around;
         margin: 0;
         margin-top: 20px;
+        width: 100%;
+        padding: 0;
+        height: 80px;
     }
   }
 
